# docs/openapi/schemas-pn-timeline.yaml
@@ -4,7 +4,7 @@ components:
     TimelineElementId:
       type: string
     
-    TimelineElementCategoryV27:
+    TimelineElementCategoryV28:
       type: string
       description: >
         stato di avanzamento del processo di notifica:`
@@ -53,14 +53,15 @@ components:
           * `ANALOG_WORKFLOW_RECIPIENT_DECEASED` - Destinatario deceduto
           * `PUBLIC_REGISTRY_VALIDATION_CALL` - Ricerca dell'indirizzo di spedizione in fase di validazione notifica
           * `PUBLIC_REGISTRY_VALIDATION_RESPONSE` - Recupero dell'indirizzo di spedizione dai registri nazionali
-#  categorie di diagnostica da non mostrare all'esterno: # NO EXTERNAL
-#   * `VALIDATE_F24_REQUEST` - Invio della richiesta di validazione degli F24 presenti nella richiesta di notifica # NO EXTERNAL
-#   * `VALIDATED_F24` - F24 validato # NO EXTERNAL
-#   * `GENERATE_F24_REQUEST` - Invio della richiesta di generazione degli F24 presenti nella richiesta di notifica con costo base # NO EXTERNAL
-#   * `GENERATED_F24` - F24 generati # NO EXTERNAL
-#   * `SEND_ANALOG_TIMEOUT_CREATION_REQUEST` - Richiesta di creazione atto opponibile per notifiche sprovviste di esito di consegna cartacea nell' intervallo temporale stabilito  # NO EXTERNAL
-#   * `SEND_ANALOG_TIMEOUT` - Mancata ricezione di un esito per il tentativo di consegna analogico nell'intervallo temporale stabilito  # NO EXTERNAL
-#   * `ANALOG_FAILURE_WORKFLOW_TIMEOUT` - Completato con fallimento il workflow di invio cartaceo per l'assenza di esiti per ogni tentativo di spedizione nell'intervallo temporale stabilito  # NO EXTERNAL
+          * `NOTIFICATION_TIMELINE_REWORKED` - Invio richiesta di Rework della timeline per una notifica
+      #  categorie di diagnostica da non mostrare all'esterno: # NO EXTERNAL
+      #   * `VALIDATE_F24_REQUEST` - Invio della richiesta di validazione degli F24 presenti nella richiesta di notifica # NO EXTERNAL
+      #   * `VALIDATED_F24` - F24 validato # NO EXTERNAL
+      #   * `GENERATE_F24_REQUEST` - Invio della richiesta di generazione degli F24 presenti nella richiesta di notifica con costo base # NO EXTERNAL
+      #   * `GENERATED_F24` - F24 generati # NO EXTERNAL
+      #   * `SEND_ANALOG_TIMEOUT_CREATION_REQUEST` - Richiesta di creazione atto opponibile per notifiche sprovviste di esito di consegna cartacea nell' intervallo temporale stabilito  # NO EXTERNAL
+      #   * `SEND_ANALOG_TIMEOUT` - Mancata ricezione di un esito per il tentativo di consegna analogico nell'intervallo temporale stabilito  # NO EXTERNAL
+      #   * `ANALOG_FAILURE_WORKFLOW_TIMEOUT` - Completato con fallimento il workflow di invio cartaceo per l'assenza di esiti per ogni tentativo di spedizione nell'intervallo temporale stabilito  # NO EXTERNAL
       enum:
         - SENDER_ACK_CREATION_REQUEST
         - VALIDATE_NORMALIZE_ADDRESSES_REQUEST
@@ -107,8 +108,9 @@ components:
         - ANALOG_WORKFLOW_RECIPIENT_DECEASED
         - PUBLIC_REGISTRY_VALIDATION_CALL
         - PUBLIC_REGISTRY_VALIDATION_RESPONSE
+        - NOTIFICATION_TIMELINE_REWORKED
 
-    TimelineElementV27:
+    TimelineElementV28:
       type: object
       additionalProperties: false
       properties:
@@ -143,25 +145,25 @@ components:
             Chiavi dei documenti che provano l'effettivo accadimento dell'evento descritto in timeline.
             Questo elemento
         category:
-          $ref: '#/components/schemas/TimelineElementCategoryV27'
+          $ref: '#/components/schemas/TimelineElementCategoryV28'
         details:
-          $ref: '#/components/schemas/TimelineElementDetailsV27'
+          $ref: '#/components/schemas/TimelineElementDetailsV28'
 
-    TimelineElementDetailsV27:
+    TimelineElementDetailsV28:
       description: The raw event payload that will be different based on the event.
       oneOf:
         - "$ref": "#/components/schemas/SenderAckCreationRequestDetails"
         - "$ref": "#/components/schemas/NormalizedAddressDetails"
-        - "$ref": "#/components/schemas/NotificationRequestAcceptedDetailsV27"
+        - "$ref": "#/components/schemas/NotificationRequestAcceptedDetailsV28"
         - "$ref": "#/components/schemas/AnalogFailureWorkflowDetails"
         - "$ref": "#/components/schemas/AnalogSuccessWorkflowDetails"
-        - "$ref": "#/components/schemas/CompletelyUnreachableCreationRequestDetails"
+        - "$ref": "#/components/schemas/CompletelyUnreachableCreationRequestDetailsV28"
         - "$ref": "#/components/schemas/CompletelyUnreachableDetails"
-        - "$ref": "#/components/schemas/DigitalDeliveryCreationRequestDetails"
+        - "$ref": "#/components/schemas/DigitalDeliveryCreationRequestDetailsV28"
         - "$ref": "#/components/schemas/DigitalFailureWorkflowDetails"
         - "$ref": "#/components/schemas/DigitalSuccessWorkflowDetails"
         - "$ref": "#/components/schemas/GetAddressInfoDetails"
-        - "$ref": "#/components/schemas/NotificationViewedCreationRequestDetailsV23"
+        - "$ref": "#/components/schemas/NotificationViewedCreationRequestDetailsV28"
         - "$ref": "#/components/schemas/NotificationViewedDetailsV23"
         - "$ref": "#/components/schemas/NotificationRADDRetrievedDetails"
         - "$ref": "#/components/schemas/PublicRegistryCallDetails"
@@ -194,14 +196,11 @@ components:
         - "$ref": "#/components/schemas/AnalogWorkflowRecipientDeceasedDetailsV26"
         - "$ref": "#/components/schemas/PublicRegistryValidationCallDetails"
         - "$ref": "#/components/schemas/PublicRegistryValidationResponseDetails"
+        - "$ref": "#/components/schemas/NotificationTimelineReworkedDetails"
 
-    NotificationRequestAcceptedDetailsV27:
+    NotificationRequestAcceptedDetailsV28:
       type: object
       properties:
-        recIndex:
-          type: integer
-          description: Index destinatario notifica digitale
-          format: int32
         notificationRequestId:
           type: string
           description: >-
@@ -237,7 +236,7 @@ components:
           description: Chiave per recupero da safe-storage del documento aar
 
 
-    CompletelyUnreachableCreationRequestDetails:
+    CompletelyUnreachableCreationRequestDetailsV28:
       type: object
       required:
         - recIndex
@@ -246,7 +245,7 @@ components:
           type: integer
           description: Index destinatario notifica digitale
           format: int32
-        legalfactId:
+        legalFactId:
           type: string
           maxLength: 128
           description: Identificativo dell'atto opponibile a terzi del quale è stata richiesta la creazione
@@ -280,7 +279,7 @@ components:
           description: Index destinatario notifica digitale
           format: int32
 
-    DigitalDeliveryCreationRequestDetails:
+    DigitalDeliveryCreationRequestDetailsV28:
       type: object
       required:
         - recIndex
@@ -298,7 +297,7 @@ components:
           type: string
           description: Data chiusura workflow
           format: date-time
-        legalfactId:
+        legalFactId:
           type: string
           maxLength: 128
           description: Identificativo dell'atto opponibile a terzi del quale è stata richiesta la creazione
@@ -352,7 +351,7 @@ components:
           description: Data tentativo
           format: date-time
 
-    NotificationViewedCreationRequestDetailsV23:
+    NotificationViewedCreationRequestDetailsV28:
       type: object
       required:
         - recIndex
@@ -361,7 +360,7 @@ components:
           type: integer
           description: Index destinatario notifica digitale
           format: int32
-        legalfactId:
+        legalFactId:
           type: string
           maxLength: 128
           description: Identificativo dell'atto opponibile a terzi del quale è stata richiesta la creazione
@@ -1357,3 +1356,47 @@ components:
                   - ANPR
                   - REGISTRO_IMPRESE
               maxLength: 128
+
+    NotificationStatusHistoryInvalidatedElement:
+      description: elenco degli avanzamenti effettuati dal processo di notifica
+      type: object
+      required:
+        - status
+        - activeFrom
+        - relatedTimelineElements
+      properties:
+        status:
+          $ref: "./schemas-pn-status.yaml#/components/schemas/NotificationStatusV26"
+        activeFrom:
+          type: string
+          description: data e ora di raggiungimento dello stato di avanzamento
+          format: date-time
+        relatedTimelineElements:
+          type: array
+          description: Eventi avvenuti nello stato
+          items:
+            $ref: "#/components/schemas/TimelineElementV28"
+
+    NotificationTimelineReworkedDetails:
+      type: object
+      required:
+        - recIndex
+        - sentAttemptMade
+        - invalidatedTimelineAndStatusHistory
+        - categoryType
+      properties:
+        recIndex:
+          type: integer
+          description: Index destinatario notifica digitale
+          format: int32
+        sentAttemptMade:
+          type: integer
+          description: numero dei tentativi effettuati
+          format: int32
+        invalidatedTimelineAndStatusHistory:
+          description: elenco degli avanzamenti effettuati dal processo di notifica prima dell'invalidazione
+          type: array
+          items:
+            $ref: "#/components/schemas/NotificationStatusHistoryInvalidatedElement"
+        categoryType:
+          type: string
