# src/main/java/it/pagopa/pn/stream/dto/TimelineElementCategoryInt.java
@@ -58,7 +58,8 @@ public enum TimelineElementCategoryInt {
     PUBLIC_REGISTRY_VALIDATION_RESPONSE(TimelineElementCategoryInt.VERSION_27),
     SEND_ANALOG_TIMEOUT_CREATION_REQUEST(TimelineElementCategoryInt.VERSION_27),
     SEND_ANALOG_TIMEOUT(TimelineElementCategoryInt.VERSION_27),
-    ANALOG_FAILURE_WORKFLOW_TIMEOUT(TimelineElementCategoryInt.VERSION_27);
+    ANALOG_FAILURE_WORKFLOW_TIMEOUT(TimelineElementCategoryInt.VERSION_27),
+    NOTIFICATION_TIMELINE_REWORKED(TimelineElementCategoryInt.VERSION_28);
 
 
     private final int version;
@@ -75,6 +76,7 @@ public enum TimelineElementCategoryInt {
     public static final int VERSION_26 = 26;
     public static final int VERSION_27 = 27;
     public static final int VERSION_28 = 28;
+    public static final int VERSION_29 = 29;
 
     public enum DiagnosticTimelineElementCategory {
         VALIDATED_F24,
@@ -105,6 +107,7 @@ public enum TimelineElementCategoryInt {
 
     @Getter
     public enum StreamVersions {
+        STREAM_V29(VERSION_29, VERSION_28,VERSION_26),
         STREAM_V28(VERSION_28, VERSION_27,VERSION_26),
         STREAM_V27(VERSION_27, VERSION_26,VERSION_26),
         STREAM_V26(VERSION_26, VERSION_26,VERSION_26),
